[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Prykval <pryvalera21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
